Added swagger for trusted and plain APIs
