# interface/http/controller/dto/request_dto/plain_aws_session_dto/create_plain_aws_session_request_dto.go
@@ -1,14 +1,30 @@
 package plain_aws_session_dto
 
 import (
-  "github.com/gin-gonic/gin"
-  http_error2 "leapp_daemon/infrastructure/http/http_error"
+	"github.com/gin-gonic/gin"
+	http_error2 "leapp_daemon/infrastructure/http/http_error"
 )
 
+// swagger:parameters createPlainAwsSession
+type CreatePlainAwsSessionParamsWrapper struct {
+	// This text will appear as description of your request body.
+	// in:body
+	Body CreatePlainAwsSessionRequestDto
+}
+
 type CreatePlainAwsSessionRequestDto struct {
-	Name               string `json:"name" binding:"required"`
-	AccountNumber      string `json:"accountNumber" binding:"required,numeric,len=12"`
-	Region             string `json:"region" binding:"required,awsregion"`
+	// the name which will be displayed
+	// required: true
+	Name string `json:"name" binding:"required"`
+
+	// the account number of the aws account related to the role
+	// required: true
+	AccountNumber string `json:"accountNumber" binding:"required,numeric,len=12"`
+
+	// the region on which the session will be initialized
+	// required: true
+	Region string `json:"region" binding:"required,awsregion"`
+
 	User               string `json:"user" binding:"required"`
 	MfaDevice          string `json:"mfaDevice"`
 	AwsAccessKeyId     string `json:"awsAccessKeyId" binding:"required"`
